OpenUtau.Browser/build_output.txt
  蠕ｩ蜈・ｯｾ雎｡縺ｮ繝励Ο繧ｸ繧ｧ繧ｯ繝医ｒ豎ｺ螳壹＠縺ｦ縺・∪縺・..
  蠕ｩ蜈・ｯｾ雎｡縺ｮ縺吶∋縺ｦ縺ｮ繝励Ο繧ｸ繧ｧ繧ｯ繝医・譛譁ｰ縺ｧ縺吶・
  OpenUtau.Core -> D:\develop\OpenUtau_microtonal\OpenUtau.Core\bin\Debug\net8.0\OpenUtau.Core.dll
  OpenUtau.Plugin.Builtin -> D:\develop\OpenUtau_microtonal\OpenUtau.Plugin.Builtin\bin\Debug\net8.0\OpenUtau.Plugin.Builtin.dll
  OpenUtau -> D:\develop\OpenUtau_microtonal\OpenUtau\bin\Debug\net8.0\OpenUtau.dll
  OpenUtau.Browser -> D:\develop\OpenUtau_microtonal\OpenUtau.Browser\bin\Release\net8.0-browser\OpenUtau.Browser.dll
  OpenUtau.Browser (Blazor output) -> D:\develop\OpenUtau_microtonal\OpenUtau.Browser\bin\Release\net8.0-browser\wwwroot
  繧｢繧ｻ繝ｳ繝悶Μ縺ｮ繧ｵ繧､繧ｺ繧呈怙驕ｩ蛹悶☆繧九→縲√い繝励Μ縺ｮ蜍穂ｽ懊′螟峨ｏ繧句庄閭ｽ諤ｧ縺後≠繧翫∪縺吶ょ・髢九＠縺溷ｾ後↓蠢・★繝・せ繝医＠縺ｦ縺上□縺輔＞縲Ｉttps://aka.ms/dotnet-illink 繧貞盾辣ｧ縺励※縺上□縺輔＞
  OpenUtau.Core -> D:\develop\OpenUtau_microtonal\OpenUtau.Core\bin\Debug\net8.0\OpenUtau.Core.dll
  OpenUtau.Plugin.Builtin -> D:\develop\OpenUtau_microtonal\OpenUtau.Plugin.Builtin\bin\Debug\net8.0\OpenUtau.Plugin.Builtin.dll
  OpenUtau -> D:\develop\OpenUtau_microtonal\OpenUtau\bin\Debug\net8.0\OpenUtau.dll
  繧｢繧ｻ繝ｳ繝悶Μ縺ｮ繧ｵ繧､繧ｺ繧呈怙驕ｩ蛹悶☆繧九→縲√い繝励Μ縺ｮ蜍穂ｽ懊′螟峨ｏ繧句庄閭ｽ諤ｧ縺後≠繧翫∪縺吶ょ・髢九＠縺溷ｾ後↓蠢・★繝・せ繝医＠縺ｦ縺上□縺輔＞縲Ｉttps://aka.ms/dotnet-illink 繧貞盾辣ｧ縺励※縺上□縺輔＞
  [1/3] skipped unchanged files
  Compiling native assets with emcc with -Oz. This may take a while ...
  [2/3] corebindings.c -> corebindings.o [took 1.25s]
  [3/3] driver.c -> driver.o [took 1.42s]
  Linking for initial memory $(EmccInitialHeapSize)=110559232 bytes. Set this msbuild property to change the value.
  Linking with emcc with -O2. This may take a while ...
   "C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\8.0.22\tools\bin\clang++.exe" -target wasm32-unknown-emscripten -fvisibility=default -mllvm -combiner-global-alias-analysis=false -mllvm -wasm-enable-sjlj -mllvm -disable-lsr -DEMSCRIPTEN "--sysroot=C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot" -Xclang -iwithsysroot/include\fakesdl -Xclang -iwithsysroot/include\compat -msimd128 -O2 -v -fwasm-exceptions ..\cpp\worldline\worldline.cpp -c -o C:\Users\sennm\AppData\Local\Temp\emscripten_temp_y0ii67fo\worldline_0.o
  clang version 16.0.5 (https://dnceng@dev.azure.com/dnceng/internal/_git/dotnet-llvm-project 0a471ebbe6a4a9c095169dd531b825a4370f57f3)
  Target: wasm32-unknown-emscripten
  Thread model: posix
  InstalledDir: C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\8.0.22\tools\bin
   (in-process)
   "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\\8.0.22\\tools\\bin\\clang++.exe" -cc1 -triple wasm32-unknown-emscripten -emit-obj -disable-free -clear-ast-before-backend -disable-llvm-verifier -discard-value-names -main-file-name worldline.cpp -mrelocation-model static -mframe-pointer=none -ffp-contract=on -fno-rounding-math -mconstructor-aliases -target-feature +exception-handling -mllvm -wasm-enable-eh -target-feature +exception-handling -exception-model=wasm -target-cpu generic -target-feature +simd128 -mllvm -treat-scalable-fixed-error-as-warning -debugger-tuning=gdb -v "-fcoverage-compilation-dir=D:\\develop\\OpenUtau_microtonal\\OpenUtau.Browser" -resource-dir "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\\8.0.22\\tools\\lib\\clang\\16" -D EMSCRIPTEN -isysroot "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\\8.0.22\\tools\\emscripten\\cache\\sysroot" -internal-isystem "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\\8.0.22\\tools\\emscripten\\cache\\sysroot/include/wasm32-emscripten/c++/v1" -internal-isystem "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\\8.0.22\\tools\\emscripten\\cache\\sysroot/include/c++/v1" -internal-isystem "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\\8.0.22\\tools\\lib\\clang\\16\\include" -internal-isystem "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\\8.0.22\\tools\\emscripten\\cache\\sysroot/include/wasm32-emscripten" -internal-isystem "C:\\Program Files\\dotnet\\packs\\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\\8.0.22\\tools\\emscripten\\cache\\sysroot/include" -O2 -fdeprecated-macro "-fdebug-compilation-dir=D:\\develop\\OpenUtau_microtonal\\OpenUtau.Browser" -ferror-limit 19 -fvisibility=default -fgnuc-version=4.2.1 -fcxx-exceptions -fexceptions -exception-model=wasm -vectorize-loops -vectorize-slp "-iwithsysroot/include\\fakesdl" "-iwithsysroot/include\\compat" -mllvm -combiner-global-alias-analysis=false -mllvm -wasm-enable-sjlj -mllvm -disable-lsr -o "C:\\Users\\sennm\\AppData\\Local\\Temp\\emscripten_temp_y0ii67fo\\worldline_0.o" -x c++ "..\\cpp\\worldline\\worldline.cpp"
  clang -cc1 version 16.0.5 based upon LLVM 16.0.5 default target x86_64-pc-windows-msvc
  ignoring nonexistent directory "C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot/include/wasm32-emscripten/c++/v1"
  ignoring nonexistent directory "C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot/include/wasm32-emscripten"
  #include "..." search starts here:
  #include <...> search starts here:
   C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot/include\fakesdl
   C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot/include\compat
   C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot/include/c++/v1
   C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\8.0.22\tools\lib\clang\16\include
   C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot/include
  End of search list.
..\cpp\worldline\worldline.cpp(226,3): error G5DC3E785: no matching function for call to 'Synthesis' [D:\develop\OpenUtau_microtonal\OpenUtau.Browser\OpenUtau.Browser.csproj]
    Synthesis(f0, f0_length, sp, ap, fft_size, frame_period, fs,
    ^~~~~~~~~
  ..\cpp\worldline/../third_party/world/src/world/synthesis.h:30:6: note: candidate function not viable: requires 9 arguments, but 12 were provided
  void Synthesis(const double *f0, int f0_length,
       ^
  1 error generated.
emcc : error : '"C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Sdk.win-x64\8.0.22\tools\bin\clang++.exe" -target wasm32-unknown-emscripten -fvisibility=default -mllvm -combiner-global-alias-analysis=false -mllvm -wasm-enable-sjlj -mllvm -disable-lsr -DEMSCRIPTEN "--sysroot=C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.Emscripten.3.1.34.Cache.win-x64\8.0.22\tools\emscripten\cache\sysroot" -Xclang -iwithsysroot/include\fakesdl -Xclang -iwithsysroot/include\compat -msimd128 -O2 -v -fwasm-exceptions ..\cpp\worldline\worldline.cpp -c -o C:\Users\sennm\AppData\Local\Temp\emscripten_temp_y0ii67fo\worldline_0.o' failed (returned 1) [D:\develop\OpenUtau_microtonal\OpenUtau.Browser\OpenUtau.Browser.csproj]
C:\Program Files\dotnet\packs\Microsoft.NET.Runtime.WebAssembly.Sdk\8.0.22\Sdk\WasmApp.Native.targets(513,5): error MSB3073: 繧ｳ繝槭Φ繝・"emcc "@C:\Program Files\dotnet\packs\Microsoft.NETCore.App.Runtime.Mono.browser-wasm\8.0.22\runtimes\browser-wasm\native\src\emcc-default.rsp" -msimd128 "@C:\Program Files\dotnet\packs\Microsoft.NETCore.App.Runtime.Mono.browser-wasm\8.0.22\runtimes\browser-wasm\native\src\emcc-link.rsp" "@D:\develop\OpenUtau_microtonal\OpenUtau.Browser\obj\Release\net8.0-browser\wasm\for-publish\emcc-link.rsp"" 縺ｯ繧ｳ繝ｼ繝・1 縺ｧ邨ゆｺ・＠縺ｾ縺励◆縲・[D:\develop\OpenUtau_microtonal\OpenUtau.Browser\OpenUtau.Browser.csproj]
